[gd_scene load_steps=9 format=3 uid="uid://cic55om7hfudf"]

[ext_resource type="Script" path="res://src/enemies/boss_behemoth_vole.gd" id="1_y2xdq"]
[ext_resource type="PackedScene" uid="uid://dxoarw6w1dm6h" path="res://src/components/health_container.tscn" id="2_rebr2"]
[ext_resource type="Texture2D" uid="uid://e351ya36oghj" path="res://assets/enemies/giant_vole.png" id="3_d8euk"]
[ext_resource type="PackedScene" uid="uid://bp2x7jc1o5ynq" path="res://src/components/hit_box.tscn" id="4_onvm4"]
[ext_resource type="PackedScene" uid="uid://cnmy034x62h8s" path="res://src/components/hurt_box.tscn" id="5_8ttyp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wb35t"]
radius = 7.8
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyr66"]
size = Vector2(24, 15.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5w537"]
size = Vector2(24, 15.6)

[node name="behemoth_vole_boss" type="CharacterBody2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 2
collision_mask = 4
motion_mode = 1
script = ExtResource("1_y2xdq")
speed = 50.0
metadata/_edit_group_ = true

[node name="HealthContainer" parent="." instance=ExtResource("2_rebr2")]
max_health = 300.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_d8euk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wb35t")

[node name="HitBox" parent="." instance=ExtResource("4_onvm4")]
collision_layer = 2
damage = 2.0
response = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_gyr66")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_container") instance=ExtResource("5_8ttyp")]
collision_layer = 0
health_container = NodePath("../HealthContainer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-4.76837e-07, -3)
shape = SubResource("RectangleShape2D_5w537")

[connection signal="health_depleted" from="HealthContainer" to="." method="_on_health_container_health_depleted"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
